add new exercises

--- a/curriculum.html
+++ b/curriculum.html
@@ -21,12 +21,17 @@
       }
       h2{
         background-color:darkgrey;
+        border-bottom: solid 3px cornflowerblue;
+        padding: 10px;
 
       }
       p {
           font-family: Arial, Helvetica, sans-serif;  
           font-size: 14px;  
-        text-align: justify;  }
+          text-align: justify;  }
+        ol{
+            padding-left: 0;
+        }
         li{
             list-style-type:circle;
             list-style-position:outside;
